All tests pass, test coverage increased